--- a/backend/supabase/email-template.html
+++ b/backend/supabase/email-template.html
@@ -65,7 +65,7 @@
     <tr>
       <td style="padding: 20px 30px; text-align: center;">
         <p style="font-size: 12px; color: #9ca3af; margin: 0;">
-          Kortix AI — <span style="color: #155dfc;">Suna</span>, your AI Employee
+          Kortix AI — <span style="color: #155dfc;">Bitterbot</span>, your AI Employee
         </p>
       </td>
     </tr>
