--- a/backend/engram_dashboard/index.html
+++ b/backend/engram_dashboard/index.html
@@ -24,6 +24,9 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href="styles.css">
     
+    <!-- Configuration -->
+    <script src="config.js"></script>
+    
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
